tests/lustre/typechecking/shouldFail/type_synomym_cycle.lus
type r1 = {f2: r2};
type r2 = {f1: r1};